services/cadastro/kubernetes/cadastro-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cadastro
  labels:
    app: cadastro
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      app: cadastro
  template:
    metadata:
      name: cadastro
      labels:
        app: cadastro
    spec:
      containers:
        - name: cadastro
          image: localhost:32000/service-cadastro:${tag_version}
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.5"
            limits:
              memory: "256Mi"
              cpu: "0.5"
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
            terminationGracePeriodSeconds: 15
          startupProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
            terminationGracePeriodSeconds: 15
      restartPolicy: Always
