services/cadastro/kubernetes/cadastro-service.yaml
apiVersion: v1
kind: Service
metadata:
#  annotations:
#    traefik.ingress.kubernetes.io/load-balancer-method: drr
  labels:
    app: cadastro
  name: cadastro
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: cadastro
  type: ClusterIP
