services/cadastro/kubernetes/cadastro-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: cadastro
  name: cadastro
  annotations:
    traefik.ingress.kubernetes.io/load-balancer-method: drr
spec:
  ingressClassName: traefik-ingress-class
  rules:
    - host: cadastro.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cadastro
                port:
                  number: 80
